[project]
name = "Advanced-Relight-Node"
description = "A custom node for ComfyUI that provides advanced 2D relighting capabilities."
version = "1.0.1"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/tritant/ComfyUI_Relight_Img"

[tool.comfy]
PublisherId = "tritant"
DisplayName = "Advanced_Relight_Img"
Icon = ""


